--- a/pom.xml
+++ b/pom.xml
@@ -96,13 +96,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://44.201.199.108:8081/repository/PayPal_release/</url>
+	      <url>http:54.174.66.230:8081/repository/PayPal_release</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	    <url>http://44.201.199.108:8081/repository/PayPal_Snapshot/</url>
+	    <url>http:54.174.66.230:8081/repository/PayPal_Snapshot</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
